--- a/css/view.css
+++ b/css/view.css
@@ -33,8 +33,8 @@
     font-weight: 400;    
 }
 .menu>p,
-.menu>div>h2,
-.menu>div>span>p{
+.card-menu>h2,
+.card-menu>div>p{
     font-family: texte;
 }
 .menu>div>h2{
@@ -45,11 +45,18 @@
     font-size: 16px;
     font-weight: 300;
 }
-.menu>div>span>p{
+.card-menu>div>p{
     font-size: 15px;
     font-weight: 300;
 }
-.menu>div>span>p:last-of-type{
+.card-menu>div>p:last-of-type{
+    font-weight: bold;
+}
+.button-command{    
+    font-family: texte;
+    color: var(--color-fonts-button);
+    text-decoration: none;
+    font-size: 16px;
     font-weight: bold;
 }
     /* *** Fonts - Footer *** */
@@ -65,6 +72,12 @@
     text-decoration: none;
     color: var(--color-fonts-footer);
     font-size: 16px;
+}
+.footer>a:hover{
+    color: var(--color-button);
+}
+.footer>a:hover:last-of-type{
+    color: var(--color-skyblue);
 }
     /* *** Header *** */
 .header-logo{
@@ -82,31 +95,49 @@
 
 }
 .container{
-    max-width: 735px;
+/* !!! */
 }
     /* *** Header *** */
+.header-logo{
+    border: 1px solid orange; /* !!! */
+}
     /* *** Main *** */
 .wallpaper{
-
+    border: 1px solid royalblue; /* !!! */
 }
 .wallpaper>img{
-    width: 375px;        
+    height: 275px; /* !!! */
+    object-fit: cover; /* !!! */      
 }
 .menu{
-
+    border: 1px solid green; /* !!! */
 }
-.menu>div>span{
+.card-menu{
+    border: 1px solid red; /* !!! */
+    border-radius: 15px;
+    margin-left: 13px;
+    margin-right: 13px;
+}
+.card-menu>div{
     display: flex;
     justify-content: space-between;
 }
 .button-command{
-
+    background-image: linear-gradient(to bottom right, var(--color-button), var(--color-button-gradien));
+    width: 186px;
+    height: 50px;
+    border: none;
+    border-radius: 25px;
+    padding: 13px 16px 13px 16px;    
 }
     /* *** Footer *** */
 .footer{
     display: flex;
     flex-direction: column;
-    background-color: var(--color-background-footer);        
+    background-color: var(--color-background-footer);
+    width: 100%;
+    padding-bottom: 15px;
+    padding-left: 25px      
 }
 .footer>a{
     margin-bottom: 7px;
