--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,23 @@
         /* *** feuille de styles CSS index - projet ohmyfood *** */
     /* *** ROOT - Variable CSS *** */
 :root{
-    --color-button: #9356DC;                /* Violet */
-    --color-button-gradien: #FF79DA;        /* Violet clair */
-    --color-fonts-new: #008766;             /* Vert */
-    --color-clear-new: #99E2D0;             /* Vert clair */
-    --color-bleu-marine: #003A68;           /* Bleu marine */
-    --color-skyblue: #89C8FA;               /* Bleu ciel */
-    --color-background-footer: #353535;     /* Noir */
-    --color-fonts-paragraph-prix: #353535;  /* Noir */
-    --color-fonts-footer: #FFFFFF;          /* White */
-    --color-fonts-button: #FFFFFF;          /* White */
-    --color-fonts-titre-menu: #101010;      /* Noir */
-    --color-fonts-texte: #000000;           /* Noir */
-    --color-background-header: #EAEAEA;     /* Gris */
-    --color-background-explorer: whitesmoke;   /* Gris clair */
+    --color-button: #9356DC;                    /* Violet */
+    --color-button-gradien: #FF79DA;            /* Violet clair */
+    --color-fonts-new: #008766;                 /* Vert */
+    --color-background-new: #99E2D0;            /* Vert clair */
+    --color-bleu-marine: #003A68;               /* Bleu marine */
+    --color-skyblue: #89C8FA;                   /* Bleu ciel */
+    --color-background-footer: #353535;         /* Noir */
+    --color-fonts-paragraph-prix: #353535;      /* Noir */
+    --color-fonts-footer: #FFFFFF;              /* White */
+    --color-fonts-button: #FFFFFF;              /* White */
+    --color-fonts-titre-menu: #101010;          /* Noir */
+    --color-fonts-texte: #000000;               /* Noir */
+    --color-background-header: #EAEAEA;         /* Gris */
+    --color-background-explorer: whitesmoke;    /* Gris clair */
+    --color-background-card: #FFFFFF;           /* White */
+    --color-fil-step: #F6F6F6;                  /* White */
+    --color-step-shadow:  rgba(0, 0, 0, 0.15);   /*     background: #000000; opacity: 0.1 */    
 }
     /* *** Inclusion fonts *** */
 @font-face {
@@ -88,7 +91,8 @@
 .step-c2>p{
     font-size: 14px;    
 }
-.new{
+.new1>p,
+.new2>p{
     font-family: texte;
     color: var(--color-fonts-new);
     font-size: 14px;
@@ -125,6 +129,7 @@ body{
     margin-bottom: 5px;
 }
     /* *** Main *** */
+    /* *** Main - Location *** */
 .location{
     width: 100%;
 }
@@ -139,6 +144,7 @@ body{
     border: none;
     text-align: center;
 }
+    /* *** Main - Explorer *** */
 .explorer{
     background-color: var(--color-background-explorer);
 }
@@ -146,23 +152,20 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 .explorer-text>h1{
     width: 275px; 
     height: 68px;
     margin-top: 40px;
-    margin-right: 58px;
     margin-bottom: 0px;
-    margin-left: 42px;
     text-align: center;   
 }
 .explorer-text>p{
     width: 315px; 
     height: 46px;
     margin-top: 0px;
-    margin-right: 26px;
     margin-bottom: 27px;
-    margin-left: 34px;
     text-align: center;   
 }
 .explorer-link{
@@ -178,6 +181,7 @@ body{
     padding: 13px 18.75px 13px 18.75px;
     margin-bottom: 57px;
 }
+    /* *** Main - Notice *** */
 .notice>h2{
     margin-top: 46px;
     margin-bottom: 26px;
@@ -193,8 +197,9 @@ body{
     width: 322.49px;
     height: 72.38px;  
     background-color: var(--color-background-explorer);
-    border: none;
+    border: solid 1px var(--color-fil-step);
     border-radius: 20px;
+    box-shadow: 0 4px var(--color-step-shadow);    
     text-align: center;
     margin-left: 32.51px;
     background-repeat: no-repeat;
@@ -243,27 +248,65 @@ body{
     top: 706px;
     left: 23px;
 }
+    /* *** Main - Restaurants list *** */
 .restaurants-list{
+    width: 100%;
     background-color: var(--color-background-explorer);
     padding-top: 54px;
+    box-shadow: 0 0 0 3px red;
 }
 .restaurants-list>h2{
     margin-top: 0px;
     margin-left: 20px;
 }
 .restaurants{
-
+    width: 100%;
+    padding-bottom: 48px;
+    box-shadow: 0 0 0 3px red;
+}
+.restaurants>a{
+    width: 100%;
+    margin-left: 17px;
+    padding-bottom: 48px;
 }
 .card-restaurant{
+    background-color: var(--color-background-card);
+    width: 100%;
     height: 251px;
-    border: 1px solid red; /* !!! */
+    margin-bottom: 18px;
     border-radius: 15px;
+    box-shadow: 0 0 0 3px red;
 }
-.card-restaurant>img{
-    height: 231px; /* !!! */
-    object-fit: cover; /* !!! */
+.img-restaurant>img{
+    width: 100%;
+    height: 174px;
+    object-fit: cover;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+    box-shadow: 0 0 0 3px red;
+}
+.card-restaurant>h3{
+    margin-top: 16px;
+    margin-left: 13px;
+    margin-bottom: 0;
+    box-shadow: 0 0 0 3px red;
+}
+.card-restaurant>p{
+    margin-top: 5px;
+    margin-left: 13px;
+    margin-bottom: 12px;
+    box-shadow: 0 0 0 3px red;
+}
+.new1,
+.new2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: var(--color-background-new);
+    width: 80px;
+    height: 29px;
+    border-radius: 2px;
 }
     /* *** Footer *** */
 .footer{
