--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
     --color-background-header: #EAEAEA;         /* Gris */
     --color-background-explorer: whitesmoke;    /* Gris clair */
     --color-background-card: #FFFFFF;           /* White */
+    --color-background-menu:#F3F3F3;            /* Gris clair */
     --color-fil-step: #F6F6F6;                  /* White */
     --color-step-shadow:  rgba(0, 0, 0, 0.15);   /*     background: #000000; opacity: 0.1 */    
 }
@@ -42,13 +43,14 @@
 .step-b1>p,
 .step-c1>p,
 .restaurants-list>h2,
-.card-restaurant>h3,
-.card-restaurant>p{
+.card-restaurant-title>h3,
+.card-restaurant-title>p{
     font-family: texte;
     color: var(--color-fonts-texte);
 }
 .explorer-link>a,
-.restaurants>a{
+.restaurants-new>a,
+.restaurants-panel>a{
     text-decoration: none;
 }
 .explorer-link>a{
@@ -61,7 +63,7 @@
     font-size: 24px;
 }
 .explorer-text>p,
-.card-restaurant>h3{
+.card-restaurant-title>h3{
     font-size: 18px;
 }
 .location>input,
@@ -76,7 +78,7 @@
     font-family: texte;
     color: var(--color-fonts-button);    
 }
-.card-restaurant>p{
+.card-restaurant-title>p{
     font-size: 17px;
 }
 .location>input,
@@ -111,10 +113,16 @@
     color: var(--color-fonts-footer);
     font-size: 16px;
 }
-    /* *** BOX *** */
+    /* *** *** *** *** *** BOX *** *** *** *** *** */
     /* *** Body *** */
+html,
 body{
+    height: 100%;
     margin: 0;
+    padding: 0;
+}
+body{
+    width: 100%;
 }
 .container{
     margin: 0;
@@ -123,18 +131,17 @@ body{
 .header-logo{
     display: flex;
     justify-content: center;
+    height: 63px;
 }
 .header-logo>img{
+    width: 162px;
     margin-top: 14px;
     margin-bottom: 5px;
 }
     /* *** Main *** */
     /* *** Main - Location *** */
-.location{
-    width: 100%;
-}
 .location>input{
-    width: 100%;
+    width: 99%;
     height: 50px;
     background-color: var(--color-background-header);
     background-image: url(../assets/images/icon/Pin.png);
@@ -191,7 +198,6 @@ body{
 .step-b1,
 .step-c1{
     display: flex;
-    justify-content: center;
     align-items: center;
     position: relative;
     width: 322.49px;
@@ -203,8 +209,13 @@ body{
     text-align: center;
     margin-left: 32.51px;
     background-repeat: no-repeat;
-    background-position-x: 34.49px;
+    background-position-x: 36.19px;
     background-position-y: center;  
+}
+.step-a1>p,
+.step-b1>p,
+.step-c1>p{
+margin-left: 73.49px;  
 }
 .step-a1{
     background-image: url(../assets/images/icon/mobile-screen-button.png);
@@ -229,6 +240,8 @@ body{
     justify-content: center;
     align-items: center;
     position: absolute;
+    top: 24.19px;
+    left: -12px;
     width: 24px;
     height: 24px;
     background-color: var(--color-button);
@@ -236,37 +249,23 @@ body{
     border-radius: 12px;
     text-align: center;  
 }
-.step-a2{
-    top: 512px;
-    left: 23px;
-}
-.step-b2{
-    top: 609px;
-    left: 23px;
-}
-.step-c2{
-    top: 706px;
-    left: 23px;
-}
     /* *** Main - Restaurants list *** */
 .restaurants-list{
     width: 100%;
     background-color: var(--color-background-explorer);
     padding-top: 54px;
-    box-shadow: 0 0 0 3px red;
 }
 .restaurants-list>h2{
     margin-top: 0px;
     margin-left: 20px;
 }
 .restaurants{
-    width: 100%;
     padding-bottom: 48px;
-    box-shadow: 0 0 0 3px red;
+    margin-left: 14px;
+    margin-right: 15px;
 }
 .restaurants>a{
     width: 100%;
-    margin-left: 17px;
     padding-bottom: 48px;
 }
 .card-restaurant{
@@ -275,7 +274,24 @@ body{
     height: 251px;
     margin-bottom: 18px;
     border-radius: 15px;
-    box-shadow: 0 0 0 3px red;
+}
+.card-restaurant-title{
+    position: relative;
+}
+.card-restaurant-title>h3{
+    width: 50%;
+    margin-top: 16px;
+    margin-left: 13px;
+    margin-bottom: 0;
+}
+.card-restaurant-title>p{
+    width: 50%;
+    margin-top: 5px;
+    margin-left: 13px;
+    margin-bottom: 12px;
+}
+.img-restaurant{
+    position: relative;
 }
 .img-restaurant>img{
     width: 100%;
@@ -283,19 +299,6 @@ body{
     object-fit: cover;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    box-shadow: 0 0 0 3px red;
-}
-.card-restaurant>h3{
-    margin-top: 16px;
-    margin-left: 13px;
-    margin-bottom: 0;
-    box-shadow: 0 0 0 3px red;
-}
-.card-restaurant>p{
-    margin-top: 5px;
-    margin-left: 13px;
-    margin-bottom: 12px;
-    box-shadow: 0 0 0 3px red;
 }
 .new1,
 .new2{
@@ -303,17 +306,46 @@ body{
     justify-content: center;
     align-items: center;
     position: absolute;
+    top: 15px;
+    right: 15px;
     background-color: var(--color-background-new);
     width: 80px;
     height: 29px;
     border-radius: 2px;
+}
+.heart-position{
+    position: absolute;
+    right: 25px;
+    bottom: 21px;
+    z-index: 2;    
+}
+.heart{
+    background-color: var(--color-background-card);
+    background-image: url(../assets/images/icon/heart-blank.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    border: none;
+    width: 22px;
+    height: 21px;
+    z-index: 2;
+}
+.heart:active{
+    background-color: var(--color-background-card);
+    background-image: url(../assets/images/icon/heart-purple.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    border: none;
+    width: 22px;
+    height: 21px;
+    z-index: 2;
 }
     /* *** Footer *** */
 .footer{
     display: flex;
     flex-direction: column;
     background-color: var(--color-background-footer);
-    width: 100%;
     padding-bottom: 15px;
     padding-left: 25px;        
 }
