--- a/css/styles-desktop-large.css
+++ b/css/styles-desktop-large.css
@@ -1,6 +1,11 @@
-        /* *** feuille de styles CSS index-desktop - projet ohmyfood *** */
+        /* *** feuille de styles CSS index-desktop-large - projet ohmyfood *** */
     /* *** Media Querie *** */
-@media screen and (min-width: 1025px) and (max-width: 1440px){
+@media screen and (min-width: 1441px){
+    body{
+        width: 1440px;
+        margin-left: auto;
+        margin-right: auto;
+    }
     /* *** Fonts *** */
     /* *** Fonts - Main *** */
     .explorer-text>h1{
