--- a/css/styles.css
+++ b/css/styles.css
@@ -39,9 +39,7 @@
 .explorer-text>h1,
 .explorer-link>a,
 .notice>h2,
-.step-a1>p,
-.step-b1>p,
-.step-c1>p,
+.step-content>p,
 .restaurants-list>h2,
 .card-restaurant-title>h3,
 .card-restaurant-title>p{
@@ -67,14 +65,10 @@
     font-size: 18px;
 }
 .location>input,
-.step-a1>p,
-.step-b1>p,
-.step-c1>p{
+.step-content>p{
     font-weight: bold;
 }
-.step-a2>p,
-.step-b2>p,
-.step-c2>p{
+.step-number>p{
     font-family: texte;
     color: var(--color-fonts-button);    
 }
@@ -83,14 +77,10 @@
 }
 .location>input,
 .explorer-link>a,
-.step-a1>p,
-.step-b1>p,
-.step-c1>p{
+.step-content>p{
     font-size: 16px;
 }
-.step-a2>p,
-.step-b2>p,
-.step-c2>p{
+.step-number>p{
     font-size: 14px;    
 }
 .new1>p,
@@ -107,6 +97,7 @@
     font-size: 18px;
     font-weight: 400;
 }
+.footer-link-logo>a,
 .footer-links>a{
     font-family: texte;
     text-decoration: none;
@@ -201,17 +192,21 @@ body{
     box-shadow: 1px 1px 9px rgba(0, 0, 0, 0.25);
 }
     /* *** Main - Notice *** */
+.notice{
+    display: flex;
+    flex-direction: column;
+}
 .notice>h2{
     margin-top: 46px;
     margin-bottom: 26px;
     margin-left: 5.33%;
 }
-.step{
-    width: 100%;
+.steps{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.step-a1,
-.step-b1,
-.step-c1{
+.step-content{
     display: flex;
     align-items: center;
     position: relative;
@@ -219,39 +214,33 @@ body{
     max-width: 322.49px;
     height: 72.38px;  
     background-color: var(--color-background-explorer);
-    border: solid 1px var(--color-fil-step);
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);    
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);    
     text-align: center;
-    margin-left: 8.67%;
     background-repeat: no-repeat;
     background-position-x: 36.19px;
     background-position-y: center;  
 }
-.step-a1>p,
-.step-b1>p,
-.step-c1>p{
+.step-content>p{
 margin-left: 22.79%;  
 }
-.step-a1{
+.step-content:first-child{
     background-image: url(../assets/images/icon/mobile-screen-button.png);
 }
-.step-b1{
+.step-content:nth-child(2){
     background-image: url(../assets/images/icon/list-ul.png);
 }
-.step-c1{
+.step-content:nth-child(3){
     background-image: url(../assets/images/icon/store.png);
 }
-.step-a1,
-.step-b1{
+.step-content:first-child,
+.step-content:nth-child(2){
     margin-bottom: 24.92px;  
 }
-.step-c1{
+.step-content:nth-child(3){
     margin-bottom: 68px;
 }
-.step-a2,
-.step-b2,
-.step-c2{
+.step-number{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -279,10 +268,6 @@ margin-left: 22.79%;
     padding-bottom: 48px;
     margin-left: 3.73%;
     margin-right: 4%;
-}
-.restaurants>a{
-    width: 100%;
-    padding-bottom: 48px;
 }
 .card-restaurant{
     position: relative;
@@ -366,8 +351,31 @@ margin-left: 22.79%;
 .footer-links{
     display: flex;
     flex-direction: column;
+}
+.footer-links>a{
     margin-bottom: 7px;
 }
-.footer-links>a:hover{
-    color: var(--color-background-new);
+.footer-link-logo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 7px;
+}
+.footer-link-logo-submit{
+    width: 11px;
+    height: 13px;
+    background-image: url(../assets/images/icon/cutlery.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    margin-right: 11px;
+}
+.footer-link-logo-partner{
+    width: 12px;
+    height: 13px;
+    background-image: url(../assets/images/icon/partner.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    margin-right: 10.08px;
 }
