--- a/css/view.css
+++ b/css/view.css
@@ -77,6 +77,7 @@
     font-size: 18px;
     font-weight: 400;
 }
+.footer-link-logo>a,
 .footer-links>a{
     font-family: texte;
     text-decoration: none;
@@ -101,6 +102,7 @@ body{
     display: flex;
     justify-content: center;
     position: relative;
+    align-items: center;
 }   
 .header-logo>img{
     margin-top: 14px;
@@ -250,11 +252,36 @@ body{
 .footer-logo{
     margin-bottom: 7px; 
 }
-.footer-links{
+.footer-links>a{
     display: flex;
     flex-direction: column;
     margin-bottom: 7px;
 }
-.footer-links>a:hover{
+.footer-link-logo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 7px;
+}
+.footer-link-logo-submit{
+    width: 11px;
+    height: 13px;
+    background-image: url(../assets/images/icon/cutlery.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    margin-right: 11px;
+}
+.footer-link-logo-partner{
+    width: 12px;
+    height: 13px;
+    background-image: url(../assets/images/icon/partner.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    margin-right: 10.08px;
+}
+.footer-links>a:hover,
+.footer-link-logo>a:hover{
     color: var(--color-background-new);
 }
